# falcon-app

./: .gitignore  docker-compose-dev.yml  docker-compose.yml  kibana_init.sh  logstash.conf  readme.md
.github/workflows/: ci.yml
backend/: .pre-commit-config.yaml  pyproject.toml  readme.md  requirements-dev.txt
backend/logic/: shortest_path.py
backend/tests/: test_shortest_path.py
falcon_backend/: .env  Dockerfile  db.sqlite3  manage.py  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements.txt
falcon_backend/falcon_backend/: asgi.py  logger.py  middleware.py  settings.py  urls.py  wsgi.py
falcon_backend/graph_app/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
falcon_backend/graph_app/management/commands/: give_me_the_odds.py
falcon_backend/graph_app/migrations/: 0001_initial.py  0002_graphmetadata.py  0003_bountyhunter_empire.py
falcon_backend/graph_app/types/: empire.py  graph_desc.py  path.py
falcon_backend/graph_app/utils/: db.py  file.py  graph.py
falcon_backend/logic/: best_path_heuristic.py  find_path.py  probability_arriving.py  shortest_path.py
falcon_backend/scripts/: init_db.py
falcon_backend/tests/: test_shortest_path.py
falcon_backend/tests/graph_app/: test_api_create_graph.py  test_api_find_path.py  test_api_graph.py  test_api_graph_info.py  test_api_shortest_path.py  test_cases.py  test_graph_to_adj_list.py
falcon_backend/tests/logic/: test_best_path_heuristic.py  test_find_path.py  test_probability_arriving.py  test_shortest_path.py
falcon_frontend/: Dockerfile  README.md  jest.config.ts  nx.json  package-lock.json  package.json  project.json  readme.md
falcon_frontend/.github/workflows/: ci.yml
falcon_frontend/e2e/: playwright.config.ts  project.json
falcon_frontend/e2e/src/: example.spec.ts
falcon_frontend/public/assets/i18n/: en.json  es.json  fr.json
falcon_frontend/src/: index.html  main.ts
falcon_frontend/src/app/: api.urls.ts  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts
falcon_frontend/src/app/models/: edge.ts  graph-info.ts  graph-path.ts  graph.ts  hunter.ts  node.ts  shortest-path.ts
falcon_frontend/src/app/services/: graph.service.ts
falcon_frontend/src/app/store/: graph.actions.ts  graph.effects.ts  graph.reducers.ts  graph.selectors.ts  index.ts
falcon_frontend/src/app/utils/: form.ts  language.ts
(+27 files in other folders)
