[project]
name = "falcon"
dynamic = ['version']

requires-python = "~=3.12"
dependencies = [
    "Django==5.0.7"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
zip-safe = true
py-modules = ['logic']

[project.optional-dependencies]

test = [
    "pytest",
]

dev = [
    "ruff",
    "pre-commit",
    "logic[test]"
]

all = [
    "logic[dev]"
]

